# pinipopt

./: CMakeLists.txt
examples/iiwa14/: CMakeLists.txt  main.cpp
include/ipopt-pino/: ocp_factory.hpp
include/ipopt-pino/constraints/: initial_state.hpp  state_equation.hpp
include/ipopt-pino/cost/: stage_cost.hpp  terminal_cost.hpp
include/ipopt-pino/robot/: floating_base.hpp  floating_base.hxx  robot.hpp  robot.hxx
include/ipopt-pino/variables/: configuration.hpp  torques.hpp  velocity.hpp
include/pinipopt/: ocp.hpp
include/pinipopt/constraints/: initial_state.hpp  state_equation.hpp
include/pinipopt/cost/: stage_cost.hpp  terminal_cost.hpp
include/pinipopt/robot/: floating_base.hpp  floating_base.hxx  robot.hpp  robot.hxx
include/pinipopt/variables/: configuration.hpp  torques.hpp  velocity.hpp
src/: ocp.cpp  ocp_factory.cpp
src/constraints/: initial_state.cpp  state_equation.cpp
src/cost/: stage_cost.cpp  terminal_cost.cpp
src/robot/: floating_base.cpp  robot.cpp
src/variables/: configuration.cpp  torques.cpp  variables.cpp  velocity.cpp
